--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,18 @@
     <meta charset="utf-8">
     <title>Andi Santos Oliveira</title>
     <link rel="stylesheet" href="css/default.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
   </head>
-  <body class="">
+  <body class="h-full w-full bg-gray-900">
+    <div class="">
+      <div class="text-center">
+        <h1>Andi</h1>
+        <h1>Santos Oliveira</h1>
+      </div>
+      <div class="">
 
+      </div>
+    </div>
   </body>
 </html>
