Add first version of skills bar and footer

--- a/src/index.html
+++ b/src/index.html
@@ -4,18 +4,67 @@
     <meta charset="utf-8">
     <title>Andi Santos Oliveira</title>
     <link rel="stylesheet" href="css/default.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
+    <script src="scripts/default.js"></script>
   </head>
-  <body class="h-full w-full bg-gray-900">
-    <div class="">
-      <div class="text-center">
+  <body class="h-full w-full flex flex-col items-stretch bg-forest bg-center">
+
+    <div class="flex flex-col grow">
+      <div class="text-center text-4xl font-audiowide text-white my-5">
         <h1>Andi</h1>
         <h1>Santos Oliveira</h1>
       </div>
-      <div class="">
 
+      <div class="">
+        <div class="bg-white">
+
+        </div>
       </div>
     </div>
+
+    <div class="flex justify-center m-10">
+      <div class="w-1/2 bg-gray-900">
+        <h1 class="text-center text-white">Compétences</h1>
+        <div class="holder">
+          <div class="bar cf" data-percent="85%">
+          <span class="label">Photoshop</span>
+        </div>
+        <div class="bar cf" data-percent="75%">
+          <span class="label light">Illustrator</span>
+        </div>
+        <div class="bar cf" data-percent="65%">
+          <span class="label">Indesign</span>
+        </div>
+        <div class="bar cf" data-percent="90%">
+          <span class="label light">HTML</span>
+        </div>
+        <div class="bar cf" data-percent="90%">
+          <span class="label">CSS</span>
+        </div>
+        <div class="bar cf" data-percent="80%">
+          <span class="label light">jQuery</span>
+        </div>
+        <div class="bar cf" data-percent="85%">
+          <span class="label light">RWD</span>
+        </div>
+          <div class="bar cf" data-percent="75%">
+            <span class="label">PHP</span>
+          </div>
+          <div class="bar cf" data-percent="80%">
+            <span class="label light">WordPress</span>
+          </div>
+          <div class="bar cf" data-percent="70%">
+            <span class="label">SASS/SCSS</span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer class="bg-gray-900 text-white py-5 text-center">
+      phone number :
+    </footer>
+
   </body>
 </html>
