--- a/src/index.html
+++ b/src/index.html
@@ -9,61 +9,60 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
     <script src="scripts/default.js"></script>
   </head>
-  <body class="h-full w-full flex flex-col items-stretch bg-forest bg-center">
+  <body class="h-full w-full flex flex-col items-stretch">
 
     <div class="flex flex-col grow">
-      <div class="text-center text-4xl font-audiowide text-white my-5">
-        <h1>Andi</h1>
-        <h1>Santos Oliveira</h1>
+
+      <div class="bg-city bg-center">
+        <div class="text-center text-5xl font-audiowide text-white my-5">
+          <h1>Andi</h1>
+          <h1>Santos Oliveira</h1>
+        </div>
+
+        <div class="flex justify-between m-10">
+          <div class="w-1/2">
+            <img src="images/youngman.png" class="w-full img-opacity" alt="">
+            <!-- Mes compétences -->
+          </div>
+          <div class="w-1/2">
+            <img src="images/youngman_sport.png" class="w-full img-opacity" alt="">
+            <!-- Mes Hobbies -->
+          </div>
+        </div>
       </div>
 
-      <div class="">
-        <div class="bg-white">
-
+      <div class="bg-forest">
+        <div class="flex justify-center m-10 p-5">
+          <div class="w-1/2 bg-gray-900">
+            <h1 class="text-center text-white my-3">Compétences</h1>
+            <div class="holder">
+              <div class="bar cf" data-percent="90%">
+                <span class="label">HTML</span>
+              </div>
+              <div class="bar cf" data-percent="90%">
+                <span class="label light">CSS</span>
+              </div>
+              <div class="bar cf" data-percent="80%">
+                <span class="label">jQuery</span>
+              </div>
+              <div class="bar cf" data-percent="75%">
+                <span class="label light">PHP</span>
+              </div>
+              <div class="bar cf" data-percent="70%">
+                <span class="label">SASS/SCSS</span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="flex justify-center m-10">
-      <div class="w-1/2 bg-gray-900">
-        <h1 class="text-center text-white">Compétences</h1>
-        <div class="holder">
-          <div class="bar cf" data-percent="85%">
-          <span class="label">Photoshop</span>
-        </div>
-        <div class="bar cf" data-percent="75%">
-          <span class="label light">Illustrator</span>
-        </div>
-        <div class="bar cf" data-percent="65%">
-          <span class="label">Indesign</span>
-        </div>
-        <div class="bar cf" data-percent="90%">
-          <span class="label light">HTML</span>
-        </div>
-        <div class="bar cf" data-percent="90%">
-          <span class="label">CSS</span>
-        </div>
-        <div class="bar cf" data-percent="80%">
-          <span class="label light">jQuery</span>
-        </div>
-        <div class="bar cf" data-percent="85%">
-          <span class="label light">RWD</span>
-        </div>
-          <div class="bar cf" data-percent="75%">
-            <span class="label">PHP</span>
-          </div>
-          <div class="bar cf" data-percent="80%">
-            <span class="label light">WordPress</span>
-          </div>
-          <div class="bar cf" data-percent="70%">
-            <span class="label">SASS/SCSS</span>
-          </div>
-        </div>
+      <div class="bg-city">
+        <h1 class="text-center text-white my-3">Mes hobbies</h1>
       </div>
     </div>
 
     <footer class="bg-gray-900 text-white py-5 text-center">
-      phone number :
+      My informations ☺
     </footer>
 
   </body>
