--- a/src/index.html
+++ b/src/index.html
@@ -7,53 +7,111 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"></script>
     <script src="scripts/default.js"></script>
   </head>
   <body class="h-full w-full flex flex-col items-stretch">
 
     <div class="flex flex-col grow">
 
-      <div class="bg-city bg-center z-0">
-        <div class="text-center text-2xl md:text-6xl font-audiowide my-5 text-white">
-          <h1>Andi</h1>
-          <h1>Santos Oliveira</h1>
-        </div>
+      <div class="bg-city bg-center flex flex-col">
+        <div class="max-width-1500 m-auto">
+          <div class="text-center text-2xl md:text-6xl font-audiowide my-12 text-white">
+            <!-- Animated Andi -->
+            <svg viewbox="0 0 100 20" class="m-auto">
+              <defs>
+                <linearGradient id="gradient">
+                  <stop color="#f1f1f1"/>
+                </linearGradient>
+                <pattern id="wave" x="0" y="-0.5" width="100%" height="100%" patternUnits="userSpaceOnUse">
+                  <path id="wavePath" d="M-40 9 Q-30 7 -20 9 T0 9 T20 9 T40 9 T60 9 T80 9 T100 9 T120 9 V20 H-40z" mask="url(#mask)" fill="url(#gradient)">
+                    <animateTransform
+                    attributeName="transform"
+                    begin="0s"
+                    dur="1.5s"
+                    type="translate"
+                    from="0,0"
+                    to="40,0"
+                    repeatCount="indefinite" />
+                  </path>
+                </pattern>
+              </defs>
+              <text text-anchor="middle" x="50" y="15" font-size="17" fill="white" fill-opacity="0.9">Andi</text>
+              <text text-anchor="middle" x="50" y="15" font-size="17" fill="url(#wave)"  fill-opacity="0.1">Andi</text>
+            </svg>
+            <h1>Santos Oliveira</h1>
+          </div>
 
-        <div class="m-10 w-100 flex justify-around">
-          <div class="w-1/3 relative group hover:cursor-pointer hover:scale-125">
+          <div class="text-white py-5">
+            Quem reprehenderit commodo export deserunt, ab iudicem fidelissimae, est anim
+            quis quis constias est nam summis dolore non arbitror quo cupidatat
+            concursionibus non mentitum ita et irure aliquip a de noster nostrud
+            tractavissent aut arbitror a nostrud. Ad est dolore quid veniam. Si sint aut
+            irure, aliqua occaecat si familiaritatem in cernantur e esse commodo, nescius
+            hic tamen.Anim pariatur te vidisse. Est quid labore ab consequat. Admodum irure
+            incurreret a pariatur ea duis si mandaremus quorum e senserit voluptatibus, eu
+            fore hic fugiat, in culpa vidisse efflorescere ubi eiusmod sint aut ullamco
+            eruditionem non se velit vidisse, a consequat ea litteris.
+            <br>
+            Doctrina dolore offendit sed e legam quid qui admodum, iis vidisse an deserunt
+            do aliquip nulla incurreret. Et ex dolore enim tempor ut cupidatat noster eram
+            in tamen, enim deserunt ex veniam duis, quo enim occaecat. Nescius ipsum
+            officia, quamquam sed irure, id summis mandaremus ex quibusdam concursionibus o
+            deserunt.Aut tamen comprehenderit ut quibusdam enim litteris, commodo do irure
+            mentitum e eiusmod tamen mentitum. Minim coniunctione incididunt dolore admodum,
+            occaecat anim voluptate, litteris non eiusmod, a non quae vidisse, eu incididunt
+            reprehenderit aut se quid eu nulla, tamen doctrina comprehenderit, in enim
+            possumus. Aute ad ea dolore expetendis e a eram nulla a fabulas, an tamen fore
+            quorum expetendis, non quo firmissimum, ad senserit illustriora ea cillum
+            admodum comprehenderit ita ubi nulla deserunt cupidatat id laboris ubi nulla
+            fabulas. Enim laboris eiusmod, dolore singulis an graviterque.
+          </div>
+
+          <div class="m-10 w-100 flex justify-around">
+            <a href="#my-skills" class="w-1/3 relative group hover:cursor-pointer hover:scale-125">
               <img src="images/youngman.png" class="w-full img-opacity" alt="">
               <p class="absolute top-1/2 text-center w-full text-2xl md:text-4xl hidden group-hover:block text-white opacity-70 bg-black">
                 Mes<br>Compétences
               </p>
-          </div>
-          <div class="w-1/3 relative group hover:cursor-pointer hover:scale-125">
-            <img src="images/youngman_sport.png" class="w-full img-opacity" alt="">
-            <p class="absolute top-1/2 text-center w-full text-2xl md:text-4xl hidden group-hover:block text-white opacity-70 bg-black">
-              Mes<br>Hobbies
-            </p>
+            </a>
+            <a href="#my-hobbies" class="w-1/3 relative group hover:cursor-pointer hover:scale-125">
+              <div class="">
+                <img src="images/youngman_sport.png" class="w-full img-opacity" alt="">
+                <p class="absolute top-1/2 text-center w-full text-2xl md:text-4xl hidden group-hover:block text-white opacity-70 bg-black">
+                  Mes<br>Hobbies
+                </p>
+              </div>
+            </a>
           </div>
         </div>
+
+
+
       </div>
 
-      <div class="bg-red-500">
-        <div class="flex justify-center m-10 p-5">
-          <div class="w-1/2 bg-gray-900">
-            <h1 id="skills" class="text-center text-white my-3">Compétences</h1>
-            <div class="holder">
-              <div class="bar cf" data-percent="90%">
-                <span class="label">HTML</span>
-              </div>
-              <div class="bar cf" data-percent="90%">
-                <span class="label light">CSS</span>
-              </div>
-              <div class="bar cf" data-percent="80%">
-                <span class="label">jQuery</span>
-              </div>
-              <div class="bar cf" data-percent="75%">
-                <span class="label light">PHP</span>
-              </div>
-              <div class="bar cf" data-percent="70%">
-                <span class="label">SASS/SCSS</span>
+      <div id="trigger-chart">
+      </div>
+      <div id="my-skills" class="bg-red-500">
+        <div class="max-width-1500 m-auto">
+          <div class="flex justify-center m-10 p-5">
+            <div class="w-2/3 bg-gray-900">
+              <h1 id="skills" class="text-center text-white my-3">Compétences</h1>
+              <div class="holder">
+                <div class="bar cf" data-percent="90%">
+                  <span class="label">HTML</span>
+                </div>
+                <div class="bar cf" data-percent="90%">
+                  <span class="label light">CSS</span>
+                </div>
+                <div class="bar cf" data-percent="80%">
+                  <span class="label">jQuery</span>
+                </div>
+                <div class="bar cf" data-percent="75%">
+                  <span class="label light">PHP</span>
+                </div>
+                <div class="bar cf" data-percent="70%">
+                  <span class="label">SASS/SCSS</span>
+                </div>
               </div>
             </div>
           </div>
@@ -61,7 +119,9 @@
       </div>
 
       <div class="bg-forest h-96">
-        <h1 class="text-center text-white my-3">Mes hobbies</h1>
+        <div class="flex justify-center m-10 p-5">
+          <h1 id="my-hobbies" class="text-center text-white my-3">Mes hobbies</h1>
+        </div>
       </div>
     </div>
 
@@ -70,8 +130,23 @@
     </footer>
 
     <script type="text/javascript">
-      var scene = $('#img-scene').get(0);
-      var parallaxInstance = new Parallax(scene);
+      // var scene = $('#img-scene').get(0);
+      // var parallaxInstance = new Parallax(scene);
+    </script>
+
+    <script type="text/javascript">
+    // init
+    var ctrl = new ScrollMagic.Controller();
+
+    // create scene
+    var scene = new ScrollMagic.Scene({
+      triggerElement: "#trigger-chart"
+    })
+    .on('start', function () {
+      animeChart();
+      console.log("worked");
+    })
+    .addTo(ctrl);
     </script>
   </body>
 </html>
