--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,10 @@
   </head>
   <body class="h-full w-full flex flex-col items-stretch -z-50">
 
+    <div class="z-30 absolute top-0 right-0">
+      <button onclick="alert('Open mail box to send mail');" type="button" name="button" class="custom-btn btn-5 m-10">Je veux vous engager !</button>
+    </div>
+
     <div class="flex flex-col grow -z-40">
 
       <div class="bg-city bg-center flex flex-col -z-30">
