--- a/src/index.html
+++ b/src/index.html
@@ -226,7 +226,7 @@
     </script>
 
     <script type="text/javascript">
-      // Animie magic
+      // ScrollMagic
       // init
       var ctrl = new ScrollMagic.Controller();
 
